--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'classDB', 'config', 'epa', 'fruits_db', 'local', 'met', 'petsitly_marketing']\n"
+      "['admin', 'classDB', 'config', 'epa', 'fruits_db', 'local', 'met', 'petsitly_marketing', 'uk_food']\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['establishments']\n"
      ]
     }
    ],
@@ -102,36 +102,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "18ab463c",
+   "execution_count": 21,
+   "id": "6a0d92df",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "{'AddressLine1': 'The Bay',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Refreshment Kiosk',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 254719,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-03-24T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66e405d36f3ec0846dfade5d'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 5}}\n"
      ]
     }
    ],
    "source": [
-    "# review the collections in our new database\n",
+    "# review a document in the establishments collection\n",
     "pprint(db.establishments.find_one())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a0d92df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review a document in the establishments collection\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -158,32 +183,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "new_restaurant = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "InsertOneResult(ObjectId('66e4086015f981b1d435f760'), acknowledged=True)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(new_restaurant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66e4086015f981b1d435f760'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "pprint(establishments.find_one({\"BusinessName\":\"Penang Flavours\"}))"
    ]
   },
   {
@@ -196,12 +289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('66e405d36f3ec0846dfade5d')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
+    "fields = {'BusinessTypeID':1, 'BusinessType': 1}\n",
+    "\n",
+    "pprint(establishments.find_one(query, projection=fields))"
    ]
   },
   {
@@ -214,22 +321,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "establishments.update_one(\n",
+    "    {'BusinessName': \"Penang Flavours\"},\n",
+    "    {'$set':\n",
+    "        {'BusinessTypeID': 1}\n",
+    "    }\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66e4086015f981b1d435f760'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "pprint(establishments.find_one({\"BusinessName\":\"Penang Flavours\"}))"
    ]
   },
   {
@@ -242,42 +394,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "768474a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "994"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "Dover_documents = establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "Dover_documents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a11d5f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeleteResult({'n': 994, 'ok': 1.0}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "establishments.delete_many(\n",
+    "    {\"LocalAuthorityName\": \"Dover\"}\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "2a51aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "Dover_documents = establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "Dover_documents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66e405d36f3ec0846dfae144'),\n",
+      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "pprint(establishments.find_one())"
    ]
   },
   {
@@ -300,12 +536,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 38786, 'nModified': 38786, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "establishments.update_many({}, [{'$set': {\"geocode.longitude\": {'$toDecimal': \"$geocode.longitude\"},\n",
+    "                                         \"geocode.latitude\": {'$toDecimal': \"$geocode.latitude\"}\n",
+    "                                         }}])"
    ]
   },
   {
@@ -319,10 +569,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 4091, 'nModified': 4091, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -331,23 +592,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 38786, 'nModified': 34695, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({}, [ {'$set':{ \"RatingValue\" : {'$toInt': \"$RatingValue\"}}} ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0deacaf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': 5,\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66e405d36f3ec0846dfae144'),\n",
+      " 'geocode': {'latitude': Decimal128('51.083812'),\n",
+      "             'longitude': Decimal128('1.195625')},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that the coordinates and rating value are now numbers\n",
+    "pprint(establishments.find_one())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0deacaf9",
+   "id": "9730ef89-ab19-4949-9849-3b42e7779e95",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
